fix: make images display "block" by default to avoid whitespace issues inside custom-element

--- a/packages/components/bolt-image/src/image.scss
+++ b/packages/components/bolt-image/src/image.scss
@@ -7,6 +7,7 @@ bolt-image {
 }
 
 .c-bolt-image__image {
+  display: block;
   // temp fix, prevents huge image when in shadow dom but not in bolt-ratio
   max-width: 100%;
 }
